Исправлены пути к файлам и структура проекта

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Система управления заявками">
     <meta name="theme-color" content="#ffffff">
     <title>Таблица заявок</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/styles.css">
     <!-- Добавляем favicon -->
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
@@ -272,6 +272,6 @@
 
     <!-- Скрипты -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js" defer></script>
-    <script src="script.js" defer></script>
+    <script src="/script.js" defer></script>
 </body>
 </html>
